Fix horizontal scroll

--- a/style/applicationStyle.css
+++ b/style/applicationStyle.css
@@ -1,3 +1,13 @@
+#app-container {
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+}
 #index {
   height: 100%;
 }
